overflow fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,7 @@
 	padding: 0;
 	font-family: "Jost", sans-serif;
 	font-weight: normal;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 /* ? main color */
